feat: Add visualization results and update .gitignore
- Add 8 visualization PNG files (tree structure, level distribution, cluster analysis)
- Update .gitignore to allow visualization files while excluding other large result files
- Total visualization size: ~15.9 MB

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Python
+﻿# Python
 __pycache__/
 *.py[cod]
 *$py.class
@@ -39,10 +39,9 @@ pubmed_cache/
 *.log
 *.tmp
 
-# Results (keep structure, ignore large files)
+# Results (keep structure, ignore large files except visualizations)
 results/*.json
 results/*.txt
-results/visualizations/*.png
 
 # Data cache
 data/enhanced_treg_vocab/pdf_text_cache.json
